# topocm_content

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  _config.yml  _toc.yml  assignments_template.ipynb  bibliography.yml  environment.yml  index.md  landing.md  license.md  myst.yml  pixi.toml  preprocess_markdown.py  pyproject.toml  readme.md  subsection_template.ipynb  syllabus.ipynb  syllabus.md  toc.yml  whatsnew.md
.jupyter/: jupyter_server_config.py
_static/: matomo.js  mystnb.css  quiz.js
code/: components.py  cons_leads.py  edx_components.py  functions.py  getyoutubecc.py  hv.css  hv_widgets_settings.css  init_course.py  init_mooc_nb.ipy  init_mooc_nb.py  make_toc.js  matplotlibrc  patch_holoviews.py  pfaffian.py  topomech.py  wraparound.py
course/: __init__.py  components.py  functions.py  init_course.py  matplotlibrc  topomech.py
docker/: Dockerfile  python3.yaml
edx_skeleton/: course.xml
expand_refs/: expand_refs.py
myst_plugins/: hide-input.mjs  quizzes.mjs  youtube.mjs
scripts/: activate_cached-filter.sh  activate_filters.sh  basic_reduced.tpl  cache_filter_clean.sh  cache_filter_smudge.sh  cachedoutput.py  clear_outputs.sh  config_filter_clean.py  config_filter_smudge.py  convert_config.py  convert_quizzes.py  converter.py  converter_ocw.py  converter_pelican.py  convertv3-v4.sh  edx.tpl  environment.yml  getyoutubecc.py  htmllinks.py  ipynb_to_html.py  ipynb_to_html.sh  links_config.py  make_logo_banner.py  myst_markdown_ruff_hook.py  nb_filter_clean.sh  nb_filter_smudge.sh  (+21 more)
(+273 files in other folders)
